# gbs-control

./: .gitignore  CMakeLists.txt  LICENSE  OLEDMenuImplementation.cpp  OSDManager.h  PersWiFiManager.cpp  PersWiFiManager.h  README.md  XIAO_BOARD_SETUP.md  XIAO_IMPLEMENTATION_SUMMARY.md  XIAO_QUICK_START.md  architecture.puml  fastpin.h  framesync.h  gbs-control.cpp  gbs-control.ino  gbs-control.ino.bak  partitions.csv  pin_config.h  platformio.ini  sdkconfig  sdkconfig.defaults  setup_deps.sh
PCB/: bom.csv  designators.csv  netlist.ipc  positions.csv
components/compat/: CMakeLists.txt  WebServerCompat.cpp  WifiManager.cpp  Wire.cpp  compat.cpp
components/compat/include/: Arduino.h  ArduinoOTA.h  DNSServer.h  ESP8266WiFi.h  ESP8266mDNS.h  ESPAsyncTCP.h  ESPAsyncWebServer.h  FS.h  HardwareSerial.h  IPAddress.h  Print.h  Stream.h  WString.h  WiFiUdp.h  Wire.h  pgmspace.h
components/gbs_control/: CMakeLists.txt
components/gbs_control/include/: OLEDMenuManager.h  OSDManager.h  PersWiFiManager.h  SSD1306Wire.h  WebSocketServer_compat.h  WebSockets.h  framesync.h  gbs_forward_decls.h  geometry_buttons.h  options.h  pin_config.h  shell.h  shell_i2c_bridge.h  tw.h
components/gbs_control/src/: OLEDMenuImplementation.cpp  OLEDMenuManager.cpp  PersWiFiManager.cpp  SSD1306Wire.cpp  WebSocketServer_compat.cpp  gbs_control.cpp  geometry_buttons.cpp  shell.cpp  shell_i2c_bridge.cpp
docs/: THIRD_PARTY_LICENSES.md  arduino_compat_layer.md  porting_guide.md  usb_cdc_read_failure_analysis.md
main/: CMakeLists.txt  gbs_control.c  gbs_control.h  main.c  main.cpp  shell.c  (+1 more)
(+16 files in other folders)
